# openai-deep-research-mcp

./: README.md  index.js  package.json  pyproject.toml
docs/: examples.md
examples/: deep_research_example.py
src/deep_research_mcp/: __init__.py  server.py
tests/: test_bulk.py  test_server.py
