[project]
name = "deep-research-mcp"
version = "0.1.0"
description = "MCP server wrapping the Deep Research API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "mcp[cli]",
    "httpx",
    "openai",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
    "black",
    "ruff",
]

[project.scripts]
deep-research-mcp = "deep_research_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-vv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_mcp"]
